k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mood-helper
  labels:
    name: mood-helper
    app: mood-helper-sync-dashboard
